# python-bkmk

./: .gitignore  README.md  pyproject.toml  test-all.sh
data/: empty-bromite-bookmarks.json  empty.bkmk.json  plain-firefox-bookmarks.html  test.bkmk.json  test.html  test.json  test.xbel
data/bookmarks-converter/: README  from_chrome_json.html  from_firefox_json.html
src/bkmk/: __init__.py  __main__.py  base.py  bkmk_json.py  chrome_json.py  netscape_html.py  xbel.py
test/: bookmarks-test.py
